[gd_scene load_steps=15 format=3 uid="uid://3q1jjylpn0o4"]

[ext_resource type="FontFile" uid="uid://bu5rqea3cknxl" path="res://assets/Kenney Future.ttf" id="1_0y32c"]
[ext_resource type="Script" path="res://scenes/LoginScreen/login_screen.gd" id="1_t5uj1"]
[ext_resource type="Texture2D" uid="uid://d2jynur6ayasj" path="res://assets/black.png" id="2_obxj0"]
[ext_resource type="Texture2D" uid="uid://c6vuwl8xegtby" path="res://assets/speed.png" id="2_v6b0n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5gvo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6otyj"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1920, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = -500.0
initial_velocity_max = -500.0
gravity = Vector3(0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rg3h8"]
bg_color = Color(0.211765, 0, 0.521569, 1)
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vcvw"]
bg_color = Color(0.211765, 0, 0.521569, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
shadow_color = Color(0, 0, 0, 1)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tia7s"]
bg_color = Color(0.16148, 0.000265513, 0.412793, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0wu6"]
bg_color = Color(0.231373, 0, 0.564706, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xv8xg"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1, 1, 1, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cmpp"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1, 1, 1, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_un46t"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1, 1, 1, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_doftj"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1, 1, 1, 1)
shadow_size = 5

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5uj1")

[node name="Background" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e5gvo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_obxj0")
stretch_mode = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(960, -32)
amount = 30
process_material = SubResource("ParticleProcessMaterial_6otyj")
texture = ExtResource("2_v6b0n")
lifetime = 2.0
fixed_fps = 60

[node name="PlayersBg" type="Panel" parent="."]
layout_mode = 0
offset_left = 1152.0
offset_top = 128.0
offset_right = 1792.0
offset_bottom = 960.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rg3h8")

[node name="Players" type="Label" parent="PlayersBg"]
texture_filter = 1
layout_mode = 0
offset_left = 64.0
offset_top = 56.0
offset_right = 568.0
offset_bottom = 768.0
theme_override_fonts/font = ExtResource("1_0y32c")
theme_override_font_sizes/font_size = 30
text = "players"

[node name="RefreshPlayerList" type="Button" parent="PlayersBg"]
layout_mode = 0
offset_left = -64.0
offset_top = 256.0
offset_right = 192.0
offset_bottom = 320.0
rotation = -1.5708
theme_override_fonts/font = ExtResource("1_0y32c")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3vcvw")
theme_override_styles/hover = SubResource("StyleBoxFlat_3vcvw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tia7s")
text = "refresh"

[node name="LineEditPlayerName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 256.0
offset_right = 896.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("1_0y32c")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_t0wu6")
placeholder_text = "Player Name"
alignment = 1
expand_to_text_length = true

[node name="LoginButton" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 512.0
offset_right = 704.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("1_0y32c")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xv8xg")
theme_override_styles/hover = SubResource("StyleBoxFlat_xv8xg")
text = "start"

[node name="SighupButton" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 640.0
offset_right = 896.0
offset_bottom = 704.0
theme_override_fonts/font = ExtResource("1_0y32c")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5cmpp")
theme_override_styles/hover = SubResource("StyleBoxFlat_5cmpp")
text = "add player"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 896.0
offset_right = 256.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_un46t")
theme_override_styles/hover = SubResource("StyleBoxFlat_un46t")
text = "Quit"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 640.0
offset_right = 512.0
offset_bottom = 704.0
theme_override_fonts/font = ExtResource("1_0y32c")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_doftj")
theme_override_styles/hover = SubResource("StyleBoxFlat_doftj")
text = "remove Player"

[connection signal="pressed" from="PlayersBg/RefreshPlayerList" to="." method="_on_refresh_player_list_pressed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="SighupButton" to="." method="_on_sighup_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
